# parallel_odu

./: .gitignore  README.md  activations.py  alphaBetaSwapGridPotts_Turin.m  alphaExpansionGridPotts.m  autoencoder.py  bmmost.sty  ffnet_creator.py  gather_matrix.m  gradient_checker.py  layers.py  lomonosov_instructions  main  main.m  main.py  main_init.m  main_true.m  stichImages.m  task2.pro  task2_parallel.pro  test_2imgs.m  test_4imgs.m  test_model.m  Лаб_работа_1-2016.doc
MinDistance/: .gitignore
PSAD/: README.md
build-task2-Desktop-Debug/: Makefile  task2
csi_science_collections/: .gitignore
experiments/: .gitignore
experiments_init/: .gitignore
modules/: .gitignore
notebooks/: ,-  ..SHELDONPC.Sheldon.log.INFO.20170117-171813.12208  ..SHELDONPC.Sheldon.log.INFO.20170117-172534.1824  ..SHELDONPC.Sheldon.log.INFO.20170125-125506.14184  ..SHELDONPC.Sheldon.log.INFO.20170125-150457.11564  ..SHELDONPC.Sheldon.log.INFO.20170218-154452.3296  .SHELDONPC.Sheldon.log.WARNING.20161211-021938.10444  .SHELDONPC.Sheldon.log.WARNING.20161211-023850.5576  .gitignore  PN_1000_topics_exp.ipynb  (+44 more)
src_parallel/: .gitignore  ApproximateOperations.h  CMakeLists.txt  ConjugateGradientAlgo.cpp  ConjugateGradientAlgo.h  DifferentialEquationModel.h  DoubleMatrix.h  Interface.h  MPIOperations.cpp  MPIOperations.h  NetModel.h  ProcessorsData.h  approximate_operations.h  clean.sh  conjugate_gradient_algo.cpp  conjugate_gradient_algo.h  differential_equation_model.h  double_matrix.h  interface.h  main.cpp  mpi_operations.cpp  mpi_operations.h  net_model.h  processors_data.h
(+660 files in other folders)
